# pixie_stitch

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE.txt  README.md  assets_autobake.bat  git_merge_upstream_changes.bat  git_push.bat  git_update_cottontail.bat  project_details.json  project_refresh.bat  windows_build_shipping.bat
assets_copy/: aida_8x8.kra  stitch1.kra  stitch2.kra  stitch3.kra
assets_executable/: README_LAUNCHER_ICONS.md  launcher_icon_64.ase  versioninfo.rc
assets_executable/launcher_icon/: 32.ase  48.ase  README_ICONS.md
launcher/: Cargo.toml
launcher/src/: main.rs  main_launcher.rs
pixie_stitch/: Cargo.toml
pixie_stitch/src/: main.rs
