[workspace]
members = [
    "cottontail/ct_platform",
    "cottontail/ct_assetbaker",
    "cottontail/ct_lib",
    "cottontail/ct_makeproject",
    "launcher",
]

# NOTE: The following optimizes dependencies (but not workspace members) 
[profile.dev.package."*"]
opt-level = 3

# NOTE: The following optimizes ct_platform 
# [profile.dev.package.ct_platform]
# opt-level = 3

# NOTE: The following overrides the whole project 
# [profile.dev]
# opt-level = 0
# debug = true
