[workspace]
members = [
    "launcher",
    "cottontail",
    "cottontail/ct_assetbaker",
    "cottontail/ct_makeproject",
    "cottontail/ct_executable_packager",
]

# NOTE: The following optimizes dependencies (but not workspace members) 
[profile.dev.package."*"]
opt-level = 3

# NOTE: The following optimizes ct_platform 
# [profile.dev.package.ct_platform]
# opt-level = 3

# NOTE: The following overrides the whole project 
 [profile.dev]
 opt-level = 2
 debug = true
