[package]
name = "launcher"
version = "2.0.1"
authors = ["Jakob Schwab <j.schwab@mail.de>"]
edition = "2018"
default-run = "launcher"

[[bin]]
path = "src/main_launcher.rs"
name = "launcher"

[dependencies.ct_lib]
path = "../cottontail/ct_lib"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[dependencies]
gif = "0.10"
indexmap = "1.3"
rayon = "1.3"

