[package]
name = "launcher"
version = "3.0.0"
authors = ["Jakob Schwab <j.schwab@mail.de>"]
edition = "2018"
default-run = "launcher"

[[bin]]
path = "src/main_launcher.rs"
name = "launcher"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[dependencies]
cottontail = { path = "../cottontail"}
gif = "0.10.0"
indexmap = "1.6.1"
rayon = "1.5.0"

