[package]
name = "pixie_stitch"
version = "0.1.0"
authors = ["Jakob Schwab <j.schwab@mail.de>"]
edition = "2018"
default-run = "pixie_stitch"

[dependencies.ct_lib]
path = "../cottontail/ct_lib"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[dependencies]
gif = "0.10"
indexmap = "1.3"
rayon = "1.3"
num_cpus = "1.0"

